# AI-Trading-Bot

./: .gitignore  SetupInstructions.md  TODO.md  plan.md  source.md  strategy.md
backend/: README.md  config.py  data.py  dummy_code.py  dummy_ws_client.py  dummy_ws_server.py  logger_config.py  main.py  pyproject.toml  redis_client.py  requirements.txt  web_server.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/bot/: Bot.py  Signal_Detection.py
backend/brokers/: MarketDataFeed_pb2.py  broker.py  brokerFactory.py  dummy_broker.py  upstoxBroker.py
backend/db/: db.py
backend/execution/: execution.py
backend/monitoring/: monitoring.py
backend/risk_management/: risk_management.py
backend/strategies/: llmstrategy.py  strategy.py  strategy1.py
frontend/: .gitignore  README.md  auth.config.ts  auth.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: actions.ts  authActions.ts
frontend/app/dashboard/: layout.tsx  loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/ui/: SigninForm.tsx  SignupPage.tsx  accountOverview.tsx  accountSelect.tsx  authenticatedNavbar.tsx  botActivity.tsx  currentTradeContent.tsx  dashboardChart.tsx  dashboardClientPage.tsx  dashbordPage.tsx  githubButton.tsx  historyPage.tsx  loadingButton.tsx  loginForm.tsx  loginPage.tsx  navbar.tsx  settingsPage.tsx  sidebar.tsx  (+2 more)
frontend/lib/: db.ts  utils.ts  zod.ts
frontend/prisma/: schema.prisma
(+10 files in other folders)
